# Auto-Sklong

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  mkgendocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: docs.yml  documentation-deploy.yaml  precommit.yaml  publish-pypi.yaml  pytest.yaml  test-with-pre.yaml
API/: index.html
API/Gama_Longitudinal_Classifier/: index.html
API/search_methods/bayesian_optimisation/: index.html
contribution/: index.html
docs/: contribution.md  experiments.md  faq.md  getting-started.md  index.md  publications.md  quick-start.md  search_space.md
docs/API/: Gama_Longitudinal_Classifier.md  index.md
docs/API/search_methods/: bayesian_optimisation.md
docs/assets/images/: AutoSklong_banner.avif
docs/examples/: index.md
docs/stylesheets/: landing.css
docs/theme/overrides/: home.html
docs/tutorials/: overview.md  search_space.md  start_with_auto_sklong.md
examples/: index.html
experiments/: experiment_engine.py  experiment_results_gather.py  index.html
experiments/24_hours/auto_sklearn/angina/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/angina_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/arthritis/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/arthritis_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/cataract/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/cataract_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/dementia/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/dementia_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/diabetes/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/diabetes_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/hbp/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/hbp_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/heartattack/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/heartattack_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/osteoporosis/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/osteoporosis_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/parkinsons/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/parkinsons_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/stroke/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/auto_sklearn/stroke_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/baseline_lexico_random_forest/angina/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/baseline_lexico_random_forest/angina_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/baseline_lexico_random_forest/arthritis/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/baseline_lexico_random_forest/arthritis_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/baseline_lexico_random_forest/cataract/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/baseline_lexico_random_forest/cataract_core/: split_1.sh  split_2.sh  split_3.sh  split_4.sh  split_5.sh
experiments/24_hours/baseline_lexico_random_forest/dementia/: split_1.sh  split_2.sh  split_3.sh  (+2 more)
experiments/experiment_launchers/: auto_sklearn.py  auto_sklong.py  lexico_random_forest.py  random_forest.py
faq/: index.html
gama/: GamaClassifier.py  GamaLongitudinalClassifier.py  GamaPipeline.py  __version__.py  gama.py
gama/configuration/: longitudinal_classification.py
gama/configuration/classification_task/: classifiers.py  preprocessors.py
gama/configuration/configuration_task_test/: classifiers.py  preprocessors.py
gama/configuration/longitudinal_classification_task/: __init__.py  classifiers.py  data_preparation.py  preprocessors.py  resampling.py
gama/configuration/regression_task/: preprocessors.py  regressors.py
gama/genetic_programming/: mutation.py  operations.py  operator_set.py
gama/genetic_programming/compilers/: scikitlearn.py
gama/genetic_programming/components/: individual.py  primitive_node.py
gama/genetic_programming/longitudinal/: constraints_longitudinal.py  crossover_longitudinal.py  mutation_longitudinal.py  operations_longitudinal.py  selection_longitudinal.py
gama/postprocessing/: __init__.py  base_post_processing.py  best_fit.py  ensemble.py
gama/search_methods/: asha.py  bayesian_optimisation.py
gama/utilities/: config_space.py  export.py  longitudinal_config_space.py  metrics.py  preprocessing.py  smac.py
gama/utilities/generic/: async_evaluator.py  timekeeper.py
quick-start/: index.html
scripts/pdm/: pdm_pre_install.py
search/: search_index.json
search_space/: index.html
stylesheets/: extra.css
tests/: conftest.py
tests/data/: stroke_longitudinal.csv
tests/system/: test_gama.py  test_gamaclassifier.py  test_gamalongitudinalclassifier.py  test_gamaregressor.py
tests/unit/: test_auto_ensemble.py  test_automl_gp.py  test_ea_longitudinal_crossover.py  test_ea_longitudinal_mutation.py  test_ea_mutation.py  test_logging_gamareport.py  test_longitudinal_selection.py  test_pipeline.py
theme/overrides/: home.html
(+565 files in other folders)
