[project]
name = "Auto-Sklong"
description = "A package for automated machine learning based on scikit-learn and sklong to tackle the longitudinal machine learning classification tasks."
readme = "README.md"
version = "0.0.9"
authors = [
    { name = "Provost Simon", email = "s.g.provost@kent.ac.uk" }, # First author & maintainer
    { name = "Pieter Gijsbers", email = "p.gijsbers@tue.nl" }, # Author of GAMA, credited for the original work
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy==1.23.3",
    "scipy>=1.5.0",
    "pandas<2.0.0,>=1.5.3",
    "stopit>=1.1.2",
    "liac-arff>=2.2.2",
    "category-encoders>=1.2.8",
    "black>=23.10.1",
    "psutil",
    "configspace<1.0.0,>=0.7.1",
    "smac==2.1.0",
    "Scikit-longitudinal>=0.0.7",
    "urllib3==1.26.6",
]

[dependency-groups]
test = [
    "pre-commit==3.2.2",
    "pytest>=4.4.0",
    "pytest-mock",
    "pytest-xdist",
    "codecov",
    "pytest-cov",
]
experiments = [
    "seaborn==0.13.2",
]
doc = [
    "mkdocs==1.6.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.5.27",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocstrings[python]>=0.25",
    "tomli>=2.0; python_version < '3.11'",
    "mkdocstrings-python>=1.16.10",
    "mkdocs-jupyter>=0.25.1",
    "pymdown-extensions>=10.14.3",
    "mkdocs-material[emoji,imaging]",
]

[project.urls]
Homepage = "https://github.com/simonprovost/Auto-Sklong"
Documentation = "https://auto-sklong.readthedocs.io/en/latest/"
Releases = "https://github.com/simonprovost/auto-sklong/releases"
Repository = "https://github.com/simonprovost/Auto-Sklong"
Issues = "https://github.com/simonprovost/Auto-Sklong/issues"
"Scientific Paper" = "https://doi.org/10.1109/BIBM62325.2024.10821737"

[project.scripts]
gama = "gama.utilities.cli:main"

[tool.uv]
default-groups = []
package = true
override-dependencies = [
    "scikit-learn ; sys_platform == 'never'",
]

[tool.setuptools]
py-modules = []
license-files = []

[tool.setuptools.packages.find]
include = ["gama*"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore::RuntimeWarning",
    # Block a warning coming from scikit-learn internals about scipy.mode
    "ignore:.*mode.*:FutureWarning",
    # We have a CRON job checking for deprecation/future warnings,
    # but we dont fail on them by default as they should not interfere with most PRs.
    # We still print to ensure new warnings are not introduced by the change.
    "default::PendingDeprecationWarning",
    "default::DeprecationWarning",
    "default::FutureWarning",
    # We will (probably) get rid of category_encoders in 22.1+
    "ignore:::category_encoders.target_encoder",
]

[tool.ruff]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"bayesian_optimisation.py" = ["E501"]

[tool.mypy]
# See # https://mypy.readthedocs.io/en/latest/config_file.html
python_version=3.10

show_column_numbers = true

warn_redundant_casts = true
warn_unused_ignores = true

# Reports any config lines that are not recognized
warn_unused_configs = true

# Probably want to turn back on later:
#no_implicit_optional
ignore_missing_imports = true

# Following configuration are default, but made explicit:
warn_no_return = true


######
#
# SCRIPTS CANNOT BE RUN IN UV
# THEREFORE, THE SCRIPTS SECTION IS COMMENTED OUT
#
#####

# uv run pytest -sv tests/unit -p no:warnings
# uv run pytest -sv tests/system -p no:warnings
# uv run pre-commit run --all-files
# uv run mkdocs serve